flux/clusters/azalab-0/manifests/apps/libsql/spinyourlife.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spinyourlife-libsql
  namespace: libsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spinyourlife-libsql
  template:
    metadata:
      labels:
        app: spinyourlife-libsql
    spec:
      containers:
        - name: libsql
          image: ghcr.io/tursodatabase/libsql-server@sha256:07d5da358f37f7f327cc33c1cb5278e7892e04225f011a65a76049372a308982
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /var/lib/sqld
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: spinyourlife-libsql-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spinyourlife-libsql
  namespace: libsql
spec:
  selector:
    app: spinyourlife-libsql
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinyourlife-libsql
  namespace: libsql
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: db.spinyour.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spinyourlife-libsql
                port:
                  number: 8080
